--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Ireh Jeon was here</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ireh Jeon|Web Technologies</title>
+</head>
+<body>
+    
+</body>
+</html>
