added Project to nav

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ireh Jeon|Web Technologies</title>
+    <title>IFSC 1310|Ireh Jeon</title>
 </head>
 <body>
     <h1>Ireh Jeon</h1>
+    <nav>
+        <ul>
+            <li><a href="prototype/index.html"> First HTML Assignment</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
