Prototype HTML5 assignment Draft

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IFSC 1310|Ireh Jeon</title>
+    <meta name="description" context="Keyword Rich Description">
+    <meta name="author" content="Ireh Jeon"
 </head>
 <body>
     <h1>Ireh Jeon</h1>
     <nav>
         <ul>
             <li><a href="prototype/index.html"> First HTML Assignment</a></li>
+            <li> Test </li>
         </ul>
     </nav>
 </body>
