--- a/prototype/index.html
+++ b/prototype/index.html
@@ -2,10 +2,110 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Ireh Jeon's Prototype assignment">
+    <meta name="author" content="Ireh Jeon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prototype</title>
+    <title>Prototype Assignment</title>
 </head>
 <body>
-    <p>First assignment lives here</p>
+    <main>
+        <h1>University of Arkansas at Little Rock: A Brief History</h1>
+        <section id="content">
+            <p>The University of Arkansas at Little Rock (<strong>UA Little Rock</strong>) is a public research university in Little Rock, Arkansas. Established as Little Rock Junior College by the Little Rock School District in 1927, the institution became a private four-year university under the name Little Rock University in 1957. It returned to public status in 1969 when it merged with the University of Arkansas System under its present name. The former campus of Little Rock Junior College is now <em>(2019)</em> the campus of Philander Smith University.</p>
+
+            <p>At 250 acres <em>(100 ha)</em>, the UA Little Rock campus encompasses more than 56 buildings, including the Center for Nanotechnology Integrative Sciences, the Emerging Analytics Center, the Sequoyah Research Center, and the Ottenheimer Library Additionally, UA Little Rock houses special learning facilities that include a learning resource center, art galleries, KUAR public radio station,[6] University Television, and a campus-wide wireless network. It is classified among "R2: Doctoral Universities – High research activity".</p>
+
+            <h2>Academics</h2>
+            <p>The university features more than 100 undergraduate degrees and 60 graduate degrees, including graduate certificates, master's degrees, and doctorates, through both traditional and online courses.[13] Students attend classes in one of the university's three new colleges and a law school</p>
+                <dl>
+                    <li>College of Business, Health, and Human Services</li>
+                    <li>College of Humanities, Arts, Social Sciences, and Education</li>
+                    <li>Donaghey College of Science, Technology, Engineering, and Mathematics</li>
+                    <li>William H. Bowen School of Law</li>
+                </dl>
+            <h2>Student life</h2>
+            <p><em>Student body composition as of May 2, 2022</em></p>
+            <table border="1">
+                <caption><strong>Race and ethnicity</strong></caption>
+                <tr>
+                    <th scope="col">Race</th>
+                    <th scope="col">Percentage</th>
+                </tr>
+                <tr>
+                    <td>White</td>
+                    <td>48%</td>
+                </tr>
+                <tr>
+                    <td>Black</td>
+                    <td>27%</td>
+                </tr>
+                <tr>
+                    <td>Other</td>
+                    <td>15%</td>
+                </tr>
+                <tr>
+                    <td>Hispanic</td>
+                    <td>4%</td>
+                </tr>
+                <tr>
+                    <td>Foreign national</td>
+                    <td>3%</td>
+                </tr>
+                <tr>
+                    <td>Asian</td>
+                    <td>2%</td>
+                </tr>
+                <tr>
+                    <td>Native American</td>
+                    <td>1%</td>
+                </tr>
+            </table>
+            <p>The student life at UA Little Rock is typical of public universities in the United States. It is characterized by student-run organizations and affiliation groups that support social, academic, athletic, and religious activities and interests. Some of the services offered by the UA Little Rock Office of Campus Life are intramural sports and fitness programs, diversity programs, leadership development, peer tutoring, student government association, student support programs including groups for non-traditional and first-generation students, a student-run newspaper, and fraternity and sorority life. The proximity of the UA Little Rock campus to downtown Little Rock enables students to take advantage of a wide array of recreational, entertainment, educational, internship, and employment opportunities that are not available anywhere else in Arkansas.[20]</p>
+            
+            <h3>Campus Living</h3>
+            <p>UA Little Rock provides a variety of on-campus living options for students ranging from traditional resident rooms to multiple-bedroom apartments. The university has four residence halls on the eastern side of the campus and the University Village Apartment Complex[21] on the southern side of campus. Six learning communities focusing on criminal justice, arts and culture, majors and careers, future business innovators, nursing careers, and STEM are available to students.</p>
+
+            <h4>Atheletics</h4>
+            <p>UA Little Rock's 14 athletic teams are known as the Little Rock Trojans, with almost all teams participating in the Sun Belt Conference. Little Rock is one of two Sun Belt members that do not sponsor football (UT Arlington being the other); UA Little Rock last fielded a football team in 1955 when it was known as Little Rock Junior College. Little Rock's main athletic offices are located in the Jack Stephens Center. UA Little Rock offers the following sports:</p>
+            <ol>
+                <li>Baseball</li>
+                <li>Men's and Women's Basketball</li>
+                <li>Men's and Women's Golf</li>
+                <li>Women's Volleyball</li>
+                <li>Women's Soccer</li>
+                <li>Women's Swimming/Diving</li>
+                <li>Men's and Women's Cross Country</li>
+                <li>Men's and Women's Track and Field <em>(Indoor and Outdoor)</em></li>
+                <li>Men's wrestling</li>
+            </ol>
+            <p><em>Two Little Rock teams that do not compete in the Sun Belt are the women's swimming and diving team (Missouri Valley Conference) and wrestling (Pac-12 Conference), neither of which the Sun Belt sponsors. Wrestling is the school's newest sport, starting in 2019, and is the first Division I program in Arkansas.
+            </em></p>
+            <p><em>Little Rock will move to the Ohio Valley Conference for the 2022-23 season.
+            </em></p>
+
+            <h5>Collections and archives</h5>
+            <ul>
+                <li>Ottenheimer Library</li>
+                <li>Center for Arkansas History and Culture</li>
+                <li>Sequoyah National Research Center</li>
+            </ul>
+         </section>
+         <nav class="Links">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/University_of_Arkansas_at_Little_Rock">about</a></li>
+                <li><a href="">UALR</a></li>
+                <li><a href="mailto:ijjeon@ualr.edu">Contact</a></li>
+            </ul>
+
+         </nav>
+         <footer class="primary">
+            <h6>
+                &copy; 2024 Ireh Jeon
+                <a href="mailto:ijjeon@ualr.edu">ijjeon@ualr.edu</a>
+                <a href="#top">Back to Top</a>
+            </h6>
+         </footer>
+    </main>
 </body>
 </html>
