Prototype HTML5 Assignment Submission

--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
     <title>IFSC 1310|Ireh Jeon</title>
     <meta name="description" context="Keyword Rich Description">
     <meta name="author" content="Ireh Jeon"
+    <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
     <h1>Ireh Jeon</h1>
     <nav>
         <ul>
             <li><a href="prototype/index.html"> First HTML Assignment</a></li>
-            <li> Test </li>
+            <li><a href="css-demo/index.html"> CSS Demo</a></li>
         </ul>
     </nav>
+    <h2>Thoughts on Web Accessibility</h2>
+    <p>Web Accessibility is when a webpage is made to be accessed by anybody. Whether that be to give audio queues to the visually impaired or visual queues to the auditory impaired. </p>
+
+    <p>These kinds of </p>
+    <h3>Importance of Web Accessibility</h3>
+    <p></p>
 </body>
 </html>
