Web Accessability Assignment

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
         </ul>
     </nav>
     <h2>Thoughts on Web Accessibility</h2>
-    <p>Web Accessibility is when a webpage is made to be accessed by anybody. Whether that be to give audio queues to the visually impaired or visual queues to the auditory impaired. </p>
+    <p>Web Accessibility is when a webpage is made to be accessed by anybody. Whether that be to give audio queues to the visually impaired or visual queues to the auditory impaired. It is mainly used for those with impairments like visual and audio. However, it can also be used for people with normal vision/audio or healthy people. Not to mention that it will also enhance the user experience and allow for wide adaptability.</p>
 
-    <p>These kinds of </p>
+    <p>These kinds of strides are what I feel make the world a better place but also will help create a brighter future. A future that will blur the line of the capable and uncapable.</p>
     <h3>Importance of Web Accessibility</h3>
-    <p></p>
+    <p><strong>Inclusive</strong>: it allows for everyone to access information</p>
+    <p><strong>Legal</strong>: the government made sure that it was a necessity to be able to make webpages accessible to everybody</p>
+    <p><strong>User Experience</strong>: Accessibility settings will help all users.</p>
+    <p><strong>Broad audience</strong>: not only those that are in need but older people can also be able to access the webpage a little better with these accessability features.</p>
 </body>
 </html>
