--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>IFSC 1310|Ireh Jeon</title>
     <meta name="description" context="Keyword Rich Description">
     <meta name="author" content="Ireh Jeon"
+    <link href="assets/css/style.css" rel="stylesheet"/> <!-- ask teacher about this one-->
     <link href="assets/css/style.css" rel="stylesheet"/>
 </head>
 <body>
