--- a/css-demo/index.html
+++ b/css-demo/index.html
@@ -16,7 +16,7 @@
   <header role="banner" class="primary">
     <h1><a href="index.html">Building the Modern Web</a></h1>
     <h2>HTML5, CSS, JavaScript Fundamentals</h2>
-    <nav role="navigation">
+    <nav role="navigation" class="primary">
       <ul>
         <li><a href="https://ualr.edu/">UA Little Rock</a></li>
         <li><a href="http://learn.shayhowe.com/html-css/getting-to-know-html/">HTML5 & CSS Lessons</a></li>
@@ -95,7 +95,7 @@
   <!--#secondary -->
   <!--#content -->
 
-  <footer id="colophon" role="contentinfo">
+  <footer id="colophon" class= "primary" role="contentinfo">
     <h6>&copy; 2023 Ireh Jeon</h6>
   </footer>
 </body>
