--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
     <h1>Ireh Jeon</h1>
     <nav>
         <ul>
-            <li><a href="prototype/index.html"> First HTML Assignment</a></li>
-            <li><a href="css-demo/index.html"> CSS Demo</a></li>
+            <li><a href="prototype/index.html">First HTML Assignment</a></li>
+            <li><a href="css-demo/index.html">CSS Demo</a></li>
+            <li>Positioning Labs
+                <ul>
+                    <li><a href="positioning-labs/float-1.html">Float 1</a></li>
+                    <li><a href="positioning-labs/float-2.html">Float 2</a></li>
+                    <li><a href="positioning-labs/absolute-1.html">Absolute 1</a></li>
+                    <li><a href="positioning-labs/absolute-2.html">Absolute 2</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
     <h2>Thoughts on Web Accessibility</h2>
