--- a/positioning-labs/float-1.html
+++ b/positioning-labs/float-1.html
@@ -5,8 +5,8 @@
 <title>Positioning Lab</title>
 <style type="text/css">
 * {
-	margin: 0px;
-	padding: 0px;
+	margin: 6px;
+	padding: 6px;
 }
 body {
 	background-color: #ECECEC;
@@ -32,18 +32,32 @@ body {
 }
 #red {
 	background-color: #900;
+	width: 370px;
+	height: 125px;
+	float: right;
 }
 #green {
 	background-color: #090;
+	width: 370px;
+	height: 125px;
+	float:left;
 }
 #blue {
 	background-color: #00F;
+	width: 370px;
+	height: 125px;
+	float: right;
 }
 #purple {
 	background-color: #63C;
+	width: 370px;
+	height: 125px;
+	float:left;
 }
 #footer {
 	background-color: #666;
+	clear: both;
+	padding:0;
 }
 h1 {
 	color: #000;
