--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul>
             <li><a href="prototype/index.html">First HTML Assignment</a></li>
             <li><a href="css-demo/index.html">CSS Demo</a></li>
+            <li><a href="assets/img/screenshot.png">Flex Froggy</a></li>
             <li>Positioning Labs
                 <ul>
                     <li><a href="positioning-labs/float-1.html">Float 1</a></li>
