--- a/positioning-labs/float-2.html
+++ b/positioning-labs/float-2.html
@@ -5,8 +5,8 @@
 <title>Positioning Lab</title>
 <style type="text/css">
 * {
-	margin: 0px;
-	padding: 0px;
+	margin: 6px;
+	padding: 6px;
 }
 body {
 	background-color: #ECECEC;
@@ -29,21 +29,41 @@ body {
 	width: 800px;
 	margin-right: auto;
 	margin-left: auto;
-}
+	display: flex;
+	
 #red {
 	background-color: #900;
+	width: 170px;
+	height:125px;
+	justify-content: center;
+	align-items: center;
+}
 }
 #green {
 	background-color: #090;
+	width: 170px;
+	height: 125px;
+	justify-content: center;
+	align-items: center;
 }
 #blue {
 	background-color: #00F;
+	width: 170px;
+	height: 125px;
+	justify-content: center;
+	align-items: center;
 }
 #purple {
 	background-color: #63C;
+	width: 170px;
+	height: 125px;
+	justify-content: center;
+	align-items: center;
 }
 #footer {
 	background-color: #666;
+	clear: both;
+	padding:0;
 }
 h1 {
 	color: #000;
