--- a/positioning-labs/absolute-2.html
+++ b/positioning-labs/absolute-2.html
@@ -29,21 +29,48 @@ body {
 	width: 800px;
 	margin-right: auto;
 	margin-left: auto;
+
 }
 #red {
 	background-color: #900;
+	position:absolute;
+	height: 100px;
+	width: 125px;
+	top: 0;
+	left: 0;
 }
 #green {
 	background-color: #090;
+	position: absolute;
+	height: 100px;
+	width: 125px;
+	top:0;
+	right:0;
 }
 #blue {
 	background-color: #00F;
+	position: absolute;
+	height: 100px;
+	width: 125px;
+	bottom: 0;
+	left: 0;
 }
 #purple {
 	background-color: #63C;
+	position:absolute;
+	height: 100px;
+	width: 125px;
+	bottom:0;
+	right:0;
 }
 #footer {
 	background-color: #666;
+	height: 100px;
+	width:125px;
+	position: absolute;
+	top: 50%;
+	left:50%;
+	transform:translate(-50%, -50%);
 }
 h1 {
 	color: #000;
