fixed positioning lab

--- a/positioning-labs/float-2.html
+++ b/positioning-labs/float-2.html
@@ -29,41 +29,36 @@ body {
 	width: 800px;
 	margin-right: auto;
 	margin-left: auto;
-	display: flex;
-	
+}
 #red {
 	background-color: #900;
-	width: 170px;
-	height:125px;
-	justify-content: center;
-	align-items: center;
-}
+	width: 175px;
+	height: 125px;
+	float: right;
 }
 #green {
 	background-color: #090;
-	width: 170px;
+	width: 175px;
 	height: 125px;
-	justify-content: center;
-	align-items: center;
+	float:left;
 }
 #blue {
 	background-color: #00F;
-	width: 170px;
+	width: 175px;
 	height: 125px;
-	justify-content: center;
-	align-items: center;
+	float: right;
 }
 #purple {
 	background-color: #63C;
-	width: 170px;
+	width: 175px;
 	height: 125px;
-	justify-content: center;
-	align-items: center;
+	float:left;
 }
 #footer {
-	background-color: #666;
+	background-color:#666;
 	clear: both;
 	padding:0;
+	position: relative;
 }
 h1 {
 	color: #000;
