--- a/positioning-labs/absolute-1.html
+++ b/positioning-labs/absolute-1.html
@@ -1,93 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8" />
-<title>Positioning Lab</title>
-<style type="text/css">
-* {
-	margin: 0px;
-	padding: 0px;
-}
-body {
-	background-color: #ECECEC;
-	font-weight: bold;
-	font-family: Tahoma, Geneva, sans-serif;
-	color: #FFF;
-	text-align: center;
-	line-height: 24px;
-}
-#wrapper {
-	background-color: #FFF;
-	border-top-width: 1px;
-	border-right-width: 1px;
-	border-bottom-width: 1px;
-	border-left-width: 1px;
-	border-top-style: solid;
-	border-right-style: solid;
-	border-bottom-style: solid;
-	border-left-style: solid;
-	width: 800px;
-	margin-right: auto;
-	margin-left: auto;
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Positioning Lab</title>
+  <style type="text/css">
+    /* ---------------Box Sizing----------------- */
+    html {
+      box-sizing: border-box;
+    }
+    *,
+    *:before,
+    *:after {
+      box-sizing: inherit;
+    }
+    body {
+      background-color: #ECECEC;
+      font-weight: bold;
+      font-family: Tahoma, Geneva, sans-serif;
+      color: #FFF;
+      text-align: center;
+      line-height: 24px;
+    }
+    #wrapper > div {
+		width: 125px;
+		height: 125px;
+    position:absolute;
+	}
+    #wrapper {
+      background-color: #FFF;
+      border: 1px solid #c0c0c0;
+      width: 800px;
+      margin-right: auto;
+      margin-left: auto;
+      text-shadow: 2px 2px #000;
+    }
+    #navy {
+      background-color: #001f3f;
+	    top: 0;
+	    left: 0;
+    }
+    #teal {
+      background-color: #39CCCC;
+	    top: 0;
+	    right:0;
+    }
+    #blue {
+      background-color: #0074D9;
+	    bottom:0;
+	    left: 0;
+    }
+    #aqua {
+      background-color: #7FDBFF;
+	    bottom:0;
+	    right:0;
 
-}
-#red {
-	background-color: #900;
-	position:absolute;
-	height: 100px;
-	width: 125px;
-	top: 0;
-	left: 0;
-}
-#green {
-	background-color: #090;
-	position: absolute;
-	height: 100px;
-	width: 125px;
-	top:0;
-	right:0;
-}
-#blue {
-	background-color: #00F;
-	position: absolute;
-	height: 100px;
-	width: 125px;
-	bottom: 0;
-	left: 0;
-}
-#purple {
-	background-color: #63C;
-	position:absolute;
-	height: 100px;
-	width: 125px;
-	bottom:0;
-	right:0;
-}
-#footer {
-	background-color: #666;
-	height: 100px;
-	width:125px;
-	position: absolute;
-	top: 50%;
-	left:50%;
-	transform:translate(-50%, -50%);
-}
-h1 {
-	color: #000;
-	font-weight: normal;
-	padding: 50px;
-}
-</style>
+    }
+    div#footer {
+      background-color: #666;
+      margin:20px auto;
+      position: static;
+    }
+    h1 {
+      color: #000;
+      font-weight: normal;
+      padding: 50px;
+    }
+  </style>
 </head>
-
 <body>
-<h1>Exercise 1</h1>
-<div id="wrapper">
-  <div id="red">Red</div>
-  <div id="green">Green</div>
-  <div id="blue">Blue</div>
-  <div id="purple">Purple</div>
-  <div id="footer">Footer</div>
-</div>
+  <h1>Exercise</h1>
+  <section id="wrapper">
+    <div id="navy">Navy</div>
+    <div id="teal">Teal</div>
+    <div id="blue">Blue</div>
+    <div id="aqua">Aqua</div>
+    <div id="footer">Footer</div>
+  </section>
 </body>
+
 </html>
