--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li><a href="positioning-labs/absolute-2.html">Absolute 2</a></li>
                 </ul>
             </li>
+            <li><a href="assets/img/logo.jpg">Gravit Logo</a></li>
         </ul>
     </nav>
     <h2>Thoughts on Web Accessibility</h2>
