--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 </ul>
             </li>
             <li><a href="assets/img/logo.jpg">Gravit Logo</a></li>
+            <li><a href="assets/img/bear_on_moon.JPG">Bear on the Moon</a></li>
+            <li><a href="spacex/index.html">SpaceX Dragon</a></li>
+            <li><a href="slick-demo/index.html">Image Carousel</a></li>
         </ul>
     </nav>
     <h2>Thoughts on Web Accessibility</h2>
