--- a/spacex/faqs.html
+++ b/spacex/faqs.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="description" content="Keyword rich narrative on site purpose" />
   <meta name="author" content="Ireh Jeon" />
-  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> <!-- Add your own Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Jaro:opsz@6..72&display=swap" rel="stylesheet"> <!-- Add your own Font -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
@@ -14,7 +14,7 @@
   <header role="banner" class="primary">
     <h1><a href="index.html">SpaceX Dragon</a></h1>
     <h2>First Private Spacecraft to the Space Station</h2>
-    <nav role="navigation">
+    <nav role="navigation" class="primary">
       <ul>
         <li><a href="index.html">Home Page</a></li>
         <li><a href="history.html">History</a></li>
@@ -22,7 +22,7 @@
       </ul>
     </nav>
   </header>
-  <section id="content" class="container">
+  <section id="questions" class="container">
     <h2>Frequently Asked Questions</h2>
     <ol>
         <li><p>Could SpaceX send a Dragon to the Moon?</p>
@@ -81,7 +81,7 @@
         </li>
     </ol>
   </section>
-  <footer id="colophon" role="contentinfo">
+  <footer id="colophon" class= "primary" role="contentinfo">
     <h6>&copy; 2024 Ireh Jeon</h6>
   </footer>
 </body>
