--- a/spacex/history.html
+++ b/spacex/history.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="description" content="Keyword rich narrative on site purpose" />
   <meta name="author" content="Ireh Jeon" />
-  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> <!-- Add your own Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Jaro:opsz@6..72&display=swap" rel="stylesheet"> <!-- Add your own Font -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
@@ -14,7 +14,7 @@
   <header role="banner" class="primary">
     <h1><a href="index.html">SpaceX Dragon</a></h1>
     <h2>First Private Spacecraft to the Space Station</h2>
-    <nav role="navigation">
+    <nav role="navigation" class="primary">
       <ul>
         <li><a href="index.html">Homepage</a></li>
         <li><a href="#">History</a></li>
@@ -22,7 +22,7 @@
       </ul>
     </nav>
   </header>
-  <section id="content" class="container">
+  <section id="history" class="container">
     <h2>History of SpaceX Dragon</h2>
     <p>SpaceX began developing the Dragon spacecraft in late 2004, making a public announcement in 2006 with a plan of entering service in 2009. Also in 2006, SpaceX won a contract to use the Dragon spacecraft for commercially supplied resupply services to the International Space Station for the American federal space agency, NASA.</p>
     <p>During its maiden flight in December 2010, Dragon became the first commercially built and operated spacecraft to be recovered successfully from orbit. On 25 May 2012, a cargo variant of Dragon became the first commercial spacecraft to successfully rendezvous with and attach to the International Space Station (ISS). SpaceX is contracted to deliver cargo to the ISS under NASA's Commercial Resupply Servicesprogram, and Dragon began regular cargo flights in October 2012.  With the Dragon spacecraft and the Orbital ATK Cygnus, NASA seeks to increase its partnerships with domestic commercial aviation and aeronautics industry. </p>
@@ -74,7 +74,7 @@
       </tr>
     </table>
   </section>
-  <footer id="colophon" role="contentinfo">
+  <footer id="colophon" class= "primary" role="contentinfo">
     <h6>&copy; 2024 Ireh Jeon</h6>
   </footer>
 </body>
