--- a/index.html
+++ b/index.html
@@ -26,13 +26,20 @@
             </li>
             <li><a href="assets/img/logo.jpg">Gravit Logo</a></li>
             <li><a href="assets/img/bear_on_moon.JPG">Bear on the Moon</a></li>
-            <li><a href="spacex/index.html">SpaceX Dragon</a></li>
+            <li><a href="spacex-firstdraft/index.html">SpaceX Dragon</a></li>
             <li><a href="slick-demo/index.html">Image Carousel</a></li>
+            <li><a href="spacex/index.html">SpaceX Dragon Revised</a></li>
         </ul>
     </nav>
+    <h2>Progressive Enhancement Writing Assignment</h2>
+    <p>Whether or not you are on a phone or computer, Progressive enhancement is when you make sure that whatever you are delivering is visible and works essentially for any user. Then beyond that it will give more advanced technologies for those that are more capable. <br> This is crutial for modern web development due to it's expanded accessability, greater performace and well-optimized experiences that can be provided for everyone. This article had some similarities with that of the Web Accessibility Assignment below. </p>
+    
+    <h2>Dragon Project Revision and Reflection</h2>
+    <p>Between my first draft and my second I had a much more design elements that were put into the project. When I had asked my sister she had told me that my project needed more color. So I took her advise and when I added color she had wanted me to put a little bit more space/darker colors. So I went ahead and added that. My sister had mostly looked at things in a visual light so whenever she wanted to take a look at my webpage she had told me that the configuration heading and footers were both in a really wierd position, so I then told her that I wasn't too sure what the problem was. It turned out that for the footer being on the same line as the 3 articles, it was because i had spelt section incorrectly. But once that was all settled that problem was solved. Finally, she liked the touch that I added when I had used JS to add rotation to my picture on my homepage. </p>
+    <p>I think that this semester was really enjoyable. I had a lot of fun. Especially when it came to knowing results immediately and then being able to fix as results come out. I had come from pharmacy school, where most of it was memorization. And with memorization it is difficult to grasp on how far you have progressed, because the way to test is literally taking a test to see how far you have smashed into your head. However, with a project based class, it felt a lot better as it came to knowing what I needed to fix and what I need to work on further. <br> If I could take this class again, I would more or less come in with a goal of working on a good portfolio website and then taking more time to apply these things to real world life. I am aware that I would have been able to do that this time, but I just didn't have a general idea of what to do initially when the class started. </p>
+    
     <h2>Thoughts on Web Accessibility</h2>
     <p>Web Accessibility is when a webpage is made to be accessed by anybody. Whether that be to give audio queues to the visually impaired or visual queues to the auditory impaired. It is mainly used for those with impairments like visual and audio. However, it can also be used for people with normal vision/audio or healthy people. Not to mention that it will also enhance the user experience and allow for wide adaptability.</p>
-
     <p>These kinds of strides are what I feel make the world a better place but also will help create a brighter future. A future that will blur the line of the capable and uncapable.</p>
     <h3>Importance of Web Accessibility</h3>
     <p><strong>Inclusive</strong>: it allows for everyone to access information</p>
