--- a/spacex-firstdraft/faqs.html
+++ b/spacex-firstdraft/faqs.html
@@ -5,7 +5,6 @@
   <title>Frequently Asked Questions</title>
   <meta charset="UTF-8" />
   <meta name="description" content="Keyword rich narrative on site purpose" />
-  <meta name="robots" content="noindex">
   <meta name="author" content="Ireh Jeon" />
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Jaro:opsz@6..72&display=swap" rel="stylesheet"> <!-- Add your own Font -->
   <link rel="stylesheet" href="assets/css/style.css" />
@@ -13,7 +12,7 @@
 
 <body>
   <header role="banner" class="primary">
-    <h1><a href="https://www.spacex.com">SpaceX Dragon</a></h1>
+    <h1><a href="index.html">SpaceX Dragon</a></h1>
     <h2>First Private Spacecraft to the Space Station</h2>
     <nav role="navigation" class="primary">
       <ul>
@@ -83,11 +82,7 @@
     </ol>
   </section>
   <footer id="colophon" class= "primary" role="contentinfo">
-    <h6>
-      &copy; 2024 Ireh Jeon
-      <a href="mailto:ijjeon@ualr.edu">ijjeon@ualr.edu</a>
-      <a href="#top">Back to Top</a>
-    </h6>
+    <h6>&copy; 2024 Ireh Jeon</h6>
   </footer>
 </body>
 
