--- a/spacex-firstdraft/index.html
+++ b/spacex-firstdraft/index.html
@@ -5,19 +5,16 @@
   <title>SpaceX Dragon</title>
   <meta charset="UTF-8" />
   <meta name="description" content="Keyword rich narrative on site purpose" />
-  <meta name="robots" content="noindex">
   <meta name="author" content="Ireh Jeon" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Jaro:opsz@6..72&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@accessible360/accessible-slick@1.0.1/slick/slick.min.css">
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@accessible360/accessible-slick@1.0.1/slick/accessible-slick-theme.min.css">
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
   <header role="banner" class="primary">
-    <h1><a href="https://www.spacex.com">SpaceX Dragon</a></h1>
+    <h1><a href="index.html">SpaceX Dragon</a></h1>
     <h2>First Private Spacecraft to the Space Station</h2>
     <nav role="navigation" class="primary">
       <ul>
@@ -58,24 +55,9 @@
     </article>
   </section>
 
-  <div class="fade container">
-    <div><img src="assets/img/dragon-intertior-cargo.jpg" alt="stars"></div>
-    <div><img src="assets/img/dragon-intertior-crew.jpg" alt="stars"></div>
-    <div><img src="assets/img/dragoncrew.8k.jpg" alt="stars"></div>
-  </div>
-
-
   <footer class="primary" role="contentinfo">
-    <h6>
-      &copy; 2024 Ireh Jeon
-      <a href="mailto:ijjeon@ualr.edu">ijjeon@ualr.edu</a>
-      <a href="#top">Back to Top</a>
-    </h6>
+    <h6>&copy; 2024 Ireh Jeon</h6>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@accessible360/accessible-slick@1.0.1/slick/slick.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/prismjs@1.21.0/prism.min.js"></script>
-  <script src="assets/js/scripts.js"></script>
 </body>
 
 </html>
