Absolutely Final Submission

--- a/spacex/faqs.html
+++ b/spacex/faqs.html
@@ -4,7 +4,7 @@
 <head>
   <title>Frequently Asked Questions</title>
   <meta charset="UTF-8" />
-  <meta name="description" content="Keyword rich narrative on site purpose" />
+  <meta name="description" content="FAQs of SpaceX Dragon" />
   <meta name="robots" content="noindex">
   <meta name="author" content="Ireh Jeon" />
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Jaro:opsz@6..72&display=swap" rel="stylesheet"> <!-- Add your own Font -->
@@ -82,7 +82,7 @@
         </li>
     </ol>
   </section>
-  <footer id="colophon" class= "primary" role="contentinfo">
+  <footer class= "primary" role="contentinfo">
     <h6>
       &copy; 2024 Ireh Jeon
       <a href="mailto:ijjeon@ualr.edu">ijjeon@ualr.edu</a>
