--- a/spacex/history.html
+++ b/spacex/history.html
@@ -4,7 +4,7 @@
 <head>
   <title>History</title>
   <meta charset="UTF-8" />
-  <meta name="description" content="Keyword rich narrative on site purpose" />
+  <meta name="description" content="History of SpaceX Dragon" />
   <meta name="robots" content="noindex">
   <meta name="author" content="Ireh Jeon" />
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Jaro:opsz@6..72&display=swap" rel="stylesheet"> <!-- Add your own Font -->
@@ -29,7 +29,7 @@
     <p>During its maiden flight in December 2010, Dragon became the first commercially built and operated spacecraft to be recovered successfully from orbit. On 25 May 2012, a cargo variant of Dragon became the first commercial spacecraft to successfully rendezvous with and attach to the International Space Station (ISS). SpaceX is contracted to deliver cargo to the ISS under NASA's Commercial Resupply Servicesprogram, and Dragon began regular cargo flights in October 2012.  With the Dragon spacecraft and the Orbital ATK Cygnus, NASA seeks to increase its partnerships with domestic commercial aviation and aeronautics industry. </p>
     <p>On 3 June 2017, the CRS-11 capsule largely assembled from previously flown components from the CRS-4 mission in September 2014 was launched again for the first time, with the hull, structural elements, thrusters, harnesses, propellant tanks, plumbing and many of the avionics reused while the heat shield, batteries and components exposed to sea water upon splashdown for recovery were replaced.</p>
 
-    <caption>Recent Missions</caption>
+    <h2>Recent Missions</h2>
     <table>
       <tr>
         <th>Launch Date</th>
@@ -75,7 +75,7 @@
       </tr>
     </table>
   </section>
-  <footer id="colophon" class= "primary" role="contentinfo">
+  <footer class= "primary" role="contentinfo">
     <h6>
       &copy; 2024 Ireh Jeon
       <a href="mailto:ijjeon@ualr.edu">ijjeon@ualr.edu</a>
